fixed spacing in title

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -339,7 +339,7 @@ nav {
 
 #sec1 section .timenumbers {
   display: block;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-weight: 400;
   line-height: 1.5rem;
   margin: 0 auto;
@@ -457,7 +457,7 @@ nav {
   font-size: 4rem;
   text-transform: uppercase;
   padding-bottom: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
   line-height: .7;
 }
 
