--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -51,7 +51,7 @@
  }
 
  .footer-links {
-   padding: 25px;
+   padding: 25px 25px 45px 25px;
  }
 
  footer .footer-menu.mb-section {
